tests/out/error/struct/required_field.out
tests/out/error/struct/required_field.in.bt:10:10 error: field "Spam.n" requires initialization
tests/out/error/struct/required_field.in.bt:14:11 error: field "Spam.eggs" requires initialization
